# n-body-choreographies

./: CMakeLists.txt  README.md  all.sh  plot.py
methods/: dopri5.txt  dormand5.txt  euler.txt  heun3.txt  midpoint.txt  rk4.txt  trapezoid.txt
plots/: README.md
src/: circle.cpp  common.cpp  common.hpp  logging.cpp  logging.hpp  main.cpp  render.cpp  render.hpp  simulation.cpp  simulation.hpp
src/generators/: circle.cpp  inf.cpp
states/: butterfly.txt  cat.txt  chain.txt  oval.txt  yin-yang.txt
